--- a/index.html
+++ b/index.html
@@ -3,17 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Page of Vinning</title>
     <link href="./css/style1.css" rel="stylesheet" />
 </head>
 <body>
     <header>
-    <section id="leftColumn"> <img src="./png/vi.png" alt="Vinng" />
-            <ul>
-            <li><a href="#">Specials</a></li>
-            <li><a href="#">Contact Us</a></li>
-            <li><a href="#">Yes :D</a></li>
-            </ul>
+    <section id="leftColumn"> <img src="./png/vi1.png" alt="Vinng" />
     </section>
     <section id="rightColumn">
         <p>eiwpoirpoewiopriwoerioewrioweioriworipoew poweiorioewprioweiroweor ioew rpowero oiowe iori owiro io</p>
@@ -21,6 +16,9 @@
             <li><a href="#">Home?</a></li>
             <li><a href="#">Online Store</a></li>
             <li><a href="#">My Account B></a></li>
+            <li><a href="#">Specials</a></li>
+            <li><a href="#">Contact Us</a></li>
+            <li><a href="#">Yes :D</a></li>
             </ul>
     </section>
     <nav class="horizontalNavigation">
