--- a/html/strat_e.html
+++ b/html/strat_e.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Expert Rundown</title>
     <link href="../css/style2.css" rel="stylesheet" />
 </head>
 <body>
-    
+    <p>efijwifjeoifjoeiwjfoiejfi is funny</p>
 </body>
 </html>
