--- a/html/strat_e.html
+++ b/html/strat_e.html
@@ -7,6 +7,6 @@
     <link href="../css/style2.css" rel="stylesheet" />
 </head>
 <body>
-    <p>efijwifjeoifjoeiwjfoiejfi is funny</p>
+    <header> <img src="../png/viplaceholder.png" alt="Vinng" />TDX Expert</header>
 </body>
 </html>
