--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Page of Vinning</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page of Vinning</title>
     <link href="./css/style1.css" rel="stylesheet" />
 </head>
 <body>
     <header>
-    <section id="leftColumn"> <img src="./png/vi1.png" alt="Vinng" />
+    <section id="leftColumn"> <img src="./png/viplaceholder.png" alt="Vinng" />
     </section>
     <section id="rightColumn">
-        <p>eiwpoirpoewiopriwoerioewrioweioriworipoew poweiorioewprioweiroweor ioew rpowero oiowe iori owiro io</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, quia facere! Magnam debitis illum, officia consequuntur earum aliquam explicabo nobis necessitatibus repellat id itaque hic nihil minima excepturi dolorem nostrum?</p>
             <ul>
-            <li><a href="#">Home?</a></li>
-            <li><a href="#">Online Store</a></li>
-            <li><a href="#">My Account B></a></li>
+            <li><a href="./index.html">This Page</a></li>
+            <li><a href="#">Offline Store</a></li>
+            <li><a href="./html/strat_e.html">Tips For Game I Doubt Anyone Has Played B></a></li>
             <li><a href="#">Specials</a></li>
             <li><a href="#">Contact Us</a></li>
             <li><a href="#">Yes :D</a></li>
@@ -23,7 +23,7 @@
     </section>
     <nav class="horizontalNavigation">
         <ul>
-            <li><a class="photoLink" href="#">Chocolates <img src="./png/pc_photo2.png" alt="" /></a></li>
+            <li><a class="photoLink" href="#">Chocolates <img src="./png/viplaceholder.png" alt="" /></a></li>
             <li><a class="photoLink" href="#">Fudges <img src="./png/pc_photo3.png" alt="" /></a></li>
             <li><a class="photoLink" href="#">Toffees <img src="./png/pc_photo4.png" alt="" /></a></li>
             <li><a class="photoLink" href="#">Truffles <img src="./png/pc_photo5.png" alt="" /></a></li>
