--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-    <section id="leftColumn"> <img src="./png/viplaceholder.png" alt="Vinng" />
+    <section id="leftColumn"> <a class="photoLink" href="#"> <img src="./png/viplaceholder.png" alt="Vinng" /></a>
     </section>
     <section id="rightColumn">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, quia facere! Magnam debitis illum, officia consequuntur earum aliquam explicabo nobis necessitatibus repellat id itaque hic nihil minima excepturi dolorem nostrum?</p>
@@ -23,14 +23,15 @@
     </section>
     <nav class="horizontalNavigation">
         <ul>
-            <li><a class="photoLink" href="#">Chocolates <img src="./png/viplaceholder.png" alt="" /></a></li>
-            <li><a class="photoLink" href="#">Fudges <img src="./png/pc_photo3.png" alt="" /></a></li>
-            <li><a class="photoLink" href="#">Toffees <img src="./png/pc_photo4.png" alt="" /></a></li>
-            <li><a class="photoLink" href="#">Truffles <img src="./png/pc_photo5.png" alt="" /></a></li>
+            <a class="photoLink" href="./html/strat_e.html"><img src="./png/viplaceholder.png" alt="" /></a>
         </ul>
 
     </nav>
 
     </header>
+    <footer>
+        <h2>No Footer</h2>
+        <p>Sprite pngs are taken from spriters-resource or https://www.spriters-resource.com/pc_computer/bugfablestheeverlastingsapling/asset/124410/</p>
+    </footer>
 </body>
 </html>
