--- a/html/strat_e.html
+++ b/html/strat_e.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Expert Rundown</title>
     <link href="../css/style2.css" rel="stylesheet" />
+    <link href="../css/sad.css" rel="stylesheet" />
 </head>
 <body>
     <header> <a class="photoLink" href="../index.html"><img src="../png/viplaceholder.png" alt="" /></a>
