--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./css/style1.css" rel="stylesheet" />
+    <link href="./css/sad.css" rel="stylesheet" />
 </head>
 <body>
     <header>
     <section id="leftColumn"> <a class="photoLink" href="#"> <img src="./png/viplaceholder.png" alt="Vinng" /></a>
     </section>
+    </header>
     <section id="rightColumn">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, quia facere! Magnam debitis illum, officia consequuntur earum aliquam explicabo nobis necessitatibus repellat id itaque hic nihil minima excepturi dolorem nostrum?</p>
             <ul>
@@ -23,6 +25,8 @@
     </section>
     <nav class="horizontalNavigation">
         <ul>
+            <img src="./png/viplaceholder.png" alt="" /></a>
+            <img src="./png/viplaceholder.png" alt="" /></a>
             <a class="photoLink" href="./html/strat_e.html"><img src="./png/viplaceholder.png" alt="" /></a>
         </ul>
 
@@ -30,7 +34,7 @@
 
     </header>
     <footer>
-        <h2>No Footer</h2>
+        <h1>No Footer</h1>
         <p>Sprite pngs are taken from spriters-resource or https://www.spriters-resource.com/pc_computer/bugfablestheeverlastingsapling/asset/124410/</p>
     </footer>
 </body>
