--- a/index.html
+++ b/index.html
@@ -12,8 +12,14 @@
     <section id="leftColumn"> <a class="photoLink" href="#"> <img src="./png/viplaceholder.png" alt="Vinng" /></a>
     </section>
     </header>
-    <section id="rightColumn">
+        <section id="text">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, quia facere! Magnam debitis illum, officia consequuntur earum aliquam explicabo nobis necessitatibus repellat id itaque hic nihil minima excepturi dolorem nostrum?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, quia facere! Magnam debitis illum, officia consequuntur earum aliquam explicabo nobis necessitatibus repellat id itaque hic nihil minima excepturi dolorem nostrum?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, quia facere! Magnam debitis illum, officia consequuntur earum aliquam explicabo nobis necessitatibus repellat id itaque hic nihil minima excepturi dolorem nostrum?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, quia facere! Magnam debitis illum, officia consequuntur earum aliquam explicabo nobis necessitatibus repellat id itaque hic nihil minima excepturi dolorem nostrum?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, quia facere! Magnam debitis illum, officia consequuntur earum aliquam explicabo nobis necessitatibus repellat id itaque hic nihil minima excepturi dolorem nostrum?</p>
+        </section>
+    <section id="rightColumn">
             <ul>
             <li><a href="./index.html">This Page</a></li>
             <li><a href="#">Offline Store</a></li>
@@ -34,8 +40,10 @@
 
     </header>
     <footer>
-        <h1>No Footer</h1>
         <p>Sprite pngs are taken from spriters-resource or https://www.spriters-resource.com/pc_computer/bugfablestheeverlastingsapling/asset/124410/</p>
+        <section id="copyright">
+            <p>Copyright sometime in the future, maybe... don't worry about it, here's some numbers. There contacts, trust +9-511-401-0173</p>
+        </section>
     </footer>
 </body>
 </html>
