--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, quia facere! Magnam debitis illum, officia consequuntur earum aliquam explicabo nobis necessitatibus repellat id itaque hic nihil minima excepturi dolorem nostrum?</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, quia facere! Magnam debitis illum, officia consequuntur earum aliquam explicabo nobis necessitatibus repellat id itaque hic nihil minima excepturi dolorem nostrum?</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, quia facere! Magnam debitis illum, officia consequuntur earum aliquam explicabo nobis necessitatibus repellat id itaque hic nihil minima excepturi dolorem nostrum?</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, quia facere! Magnam debitis illum, officia consequuntur earum aliquam explicabo nobis necessitatibus repellat id itaque hic nihil minima excepturi dolorem nostrum?</p>
+        <p>Also if your having a hard time finding the other url, use tab. It's a very helpfully button for hidden urls</p>
         </section>
     <section id="rightColumn">
             <ul>
@@ -42,7 +42,7 @@
     <footer>
         <p>Sprite pngs are taken from spriters-resource or https://www.spriters-resource.com/pc_computer/bugfablestheeverlastingsapling/asset/124410/</p>
         <section id="copyright">
-            <p>Copyright sometime in the future, maybe... don't worry about it, here's some numbers. There contacts, trust +9-511-401-0173</p>
+            <p>Copyright sometime in the future, maybe... don't worry about it, here's some numbers. There contact, trust +9-511-401-0173</p>
         </section>
     </footer>
 </body>
