--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     <section id="rightColumn">
             <ul>
             <li><a href="./index.html">This Page</a></li>
-            <li><a href="#">Offline Store</a></li>
-            <li><a href="./html/strat_e.html">Tips For Game I Doubt Anyone Has Played B></a></li>
+            <li><a href="#">Store Pages For Bug Fables</a></li>
+            <li><a href="#">The Most Vinning Playlist (Trust)</a></li>
             <li><a href="#">Specials</a></li>
-            <li><a href="#">Contact Us</a></li>
+            <li><a href="#">Contact Vi AD</a></li>
             <li><a href="#">Yes :D</a></li>
             </ul>
     </section>
