--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-    <section id="leftColumn"> <a class="photoLink" href="#"> <img src="./png/viplaceholder.png" alt="Vinng" /></a>
+    <section id="leftColumn"> <a class="photoLink" href="#"> <img src="./png/viface.png" alt="Vinng" /></a>
     </section>
     </header>
         <section id="text">
@@ -31,9 +31,9 @@
     </section>
     <nav class="horizontalNavigation">
         <ul>
-            <img src="./png/viplaceholder.png" alt="" /></a>
-            <img src="./png/viplaceholder.png" alt="" /></a>
-            <a class="photoLink" href="./html/strat_e.html"><img src="./png/viplaceholder.png" alt="" /></a>
+            <img src="./png/vi1.png" style="width: 105px; height: 170px;" alt="stand" /></a>
+            <img src="./png/viwiggle.gif" style="width: 105px; height: 195px;" alt="wiggle" /></a>
+            <a class="photoLink" href="./html/strat_e.html"><img src="./png/sneaky.png" alt="" /></a>
         </ul>
 
     </nav>
