--- a/html/strat_e.html
+++ b/html/strat_e.html
@@ -6,6 +6,7 @@
     <title>Expert Rundown</title>
     <link href="../css/style2.css" rel="stylesheet" />
     <link href="../css/sadded.css" rel="stylesheet" />
+        <link rel="icon" type="image/x-icon" href="../png/favicon1.ico">
 </head>
 <body>
     <header> <a class="photoLink" href="../index.html"><img src="../png/viface.png" alt="" /></a>
@@ -26,6 +27,6 @@
     <p>You should never stuggle with VX drone unless you are on a hard map or didn't know to put down more flying detection towers.</p><p>If you have a few fly detection tower then he will die. Thankfully if you beat him you shouldn't have problems with flying enemies until the final boss of the mode, so it's a great time to work on single target dsp for the last two bosses in the mode.</p></section>
     <section> <img src="../png/destructor.png" alt="Jumper 2"><p>(this is placeholder text)To deal with this rough early game medic would help a lot as you wouldn't have to place down bate towers to not waste so much money.  Another good solution is would be sentry for bate as it's very low cost and rebuild, letting it tank hits at a very cheep cost. Along with these this spawner would also be good, keep in mind though that Xsoldier can still kill spawner units and that you can only get away with this on easier maps. Also for early damage I haven't found a way to use lazer gunner for early that hasn't caused problems for mid game, but golden ranger works very well here with it's bottom path having good health, early dsp, damage type, and being able to hit hidden and flying enemies.(this is placeholder text)</p></section>
     <section><img src="../png/madchild.png" alt="Very Mad Child"><p>(this is placeholder text)To deal with this rough early game medic would help a lot as you wouldn't have to place down bate towers to not waste so much money.  Another good solution is would be sentry for bate as it's very low cost and rebuild, letting it tank hits at a very cheep cost. Along with these this spawner would also be good, keep in mind though that Xsoldier can still kill spawner units and that you can only get away with this on easier maps. Also for early damage I haven't found a way to use lazer gunner for early that hasn't caused problems for mid game, but golden ranger works very well here with it's bottom path having good health, early dsp, damage type, and being able to hit hidden and flying enemies.(this is placeholder text)</p></section></article>
-    <footer><p>Copyright sometime in the future, maybe... don't worry about it, here's some numbers. There contact, trust +9-511-401-0173</p></footer>
+    <footer><p>Copyright sometime in the future, maybe... don't worry about it, here's some numbers. There contact, don't trust +9-511-401-0173</p></footer>
 </body>
 </html>
