--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./css/style1.css" rel="stylesheet" />
     <link href="./css/sad.css" rel="stylesheet" />
+    <link rel="icon" type="image/x-icon" href="./png/favicon.ico">
 </head>
 <body>
     <header>
@@ -31,7 +32,7 @@
     </section>
     <nav class="horizontalNavigation">
         <ul>
-            <img src="./png/vi1.png" style="width: 105px; height: 170px;" alt="stand" /></a>
+            <img src="./png/vi1.png" style="width: 105px; height: 160px;" alt="stand" /></a>
             <img src="./png/viwiggle.gif" style="width: 105px; height: 195px;" alt="wiggle" /></a>
             <a class="photoLink" href="./html/strat_e.html"><img src="./png/sneaky.png" alt="" /></a>
         </ul>
@@ -42,7 +43,7 @@
     <footer>
         <p>Sprite pngs are taken from spriters-resource or https://www.spriters-resource.com/pc_computer/bugfablestheeverlastingsapling/asset/124410/</p>
         <section id="copyright">
-            <p>Copyright sometime in the future, maybe... don't worry about it, here's some numbers. There contact, trust +9-511-401-0173</p>
+            <p>Copyright sometime in the future, maybe... don't worry about it, here's some numbers. There contact, don't trust +9-511-401-0173</p>
         </section>
     </footer>
 </body>
