--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     </section>
     <nav class="horizontalNavigation">
         <ul>
-            <img src="./png/vi1.png" style="width: 105px; height: 160px;" alt="stand" /></a>
-            <img src="./png/viwiggle.gif" style="width: 105px; height: 195px;" alt="wiggle" /></a>
+            <img id="stand" src="./png/vi1.png" style="width: 105px; height: 160px;" alt="stand" /></a>
+            <img id="wiggle" src="./png/viwiggle.gif" style="width: 105px; height: 195px;" alt="wiggle" /></a>
             <a class="photoLink" href="./html/strat_e.html"><img src="./png/sneaky.png" alt="" /></a>
         </ul>
 
