--- a/html/yes.html
+++ b/html/yes.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+     <link href="../css/yes.css" rel="stylesheet" />
 </head>
 <body>
-    
+    <img src="../png/viface.png" alt=""/>
 </body>
 </html>
