--- a/index.html
+++ b/index.html
@@ -37,14 +37,13 @@
             <img id="lay" src="./png/vi4.png" style="width: 195px; height: 105px;" alt="lay" /></a>
             <a class="photoLink" href="./html/strat_e.html"><img src="./png/sneaky.png" alt="" /></a>
         </ul>
-
     </nav>
 
     </header>
     <footer>
-        <p>Sprite pngs are taken from spriters-resource or https://www.spriters-resource.com/pc_computer/bugfablestheeverlastingsapling/asset/124410/</p>
+        <p>Sprite pngs are taken from <div class="tenor-gif-embed" data-postid="23822980" data-share-method="host" data-aspect-ratio="0.7" data-width="100%"><a href="https://www.spriters-resource.com/pc_computer/bugfablestheeverlastingsapling/asset/124410/">Spriters Resource</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script> </p>
         <section id="copyright">
-            <p>Copyright sometime in the future, maybe... don't worry about it, here's some numbers. There contact, don't trust +9-511-401-0173</p>
+            <p>Copyright sometime in the future, maybe... don't worry about it, here's some numbers. There contacts for no one, don't trust +9-511-401-0173</p>
         </section>
     </footer>
 </body>
