--- a/html/store.html
+++ b/html/store.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Store?</title>
+    <link href="../css/style3.css" rel="stylesheet" />
+    <link href="./css/sad.css" rel="stylesheet" />
+    <link rel="icon" type="image/x-icon" href="../png/favicon.ico">
 </head>
 <body>
-    
+    <header><a class="photoLink" href="../index.html"> <img src="../png/viface.png" alt="Vinng" /></a>
+    <div class="tenor-gif-embed" data-postid="23822980" data-share-method="host" data-aspect-ratio="0.7" data-width="100%"><a href="https://www.spriters-resource.com/pc_computer/bugfablestheeverlastingsapling/asset/124410/">Spriters Resource</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
 </body>
 </html>
