--- a/html/yes.html
+++ b/html/yes.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Testing Ground for dumb stuff, duh</title>
      <link href="../css/yes.css" rel="stylesheet" />
 </head>
 <body>
-    <img src="../png/viface.png" alt=""/>
+    <header><a class="photoLink" href="../index.html"> <img src="../png/viface.png" alt="Vinng" /></a> <figcaption>Testing area. Nothing to see here.</figcaption>
+    </header>
 </body>
 </html>
