--- a/index.html
+++ b/index.html
@@ -10,24 +10,26 @@
 </head>
 <body>
     <header>
-    <section id="leftColumn"> <a class="photoLink" href="#"> <img src="./png/viface.png" alt="Vinng" /></a>
+    <section id="leftColumn"> <a class="photoLink" href="./index.html"> <img src="png/viface.png" alt="Vinng" /></a>
     </section>
     </header>
         <section id="text">
+        
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, quia facere! Magnam debitis illum, officia consequuntur earum aliquam explicabo nobis necessitatibus repellat id itaque hic nihil minima excepturi dolorem nostrum?</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, quia facere! Magnam debitis illum, officia consequuntur earum aliquam explicabo nobis necessitatibus repellat id itaque hic nihil minima excepturi dolorem nostrum?</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, quia facere! Magnam debitis illum, officia consequuntur earum aliquam explicabo nobis necessitatibus repellat id itaque hic nihil minima excepturi dolorem nostrum?</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, quia facere! Magnam debitis illum, officia consequuntur earum aliquam explicabo nobis necessitatibus repellat id itaque hic nihil minima excepturi dolorem nostrum?</p>
-        <p>Also if your having a hard time finding the other url, use tab. It's a very helpfully button for hidden urls</p>
+        <p>Also if your having a hard time finding the other url, use tab. It's a very helpfully buttons for hidden urls</p>
+
         </section>
     <section id="rightColumn">
             <ul>
             <li><a href="./index.html">This Page</a></li>
-            <li><a href="#">Store Pages For Bug Fables</a></li>
+            <li><a href="./html/store.html">Store Pages For Bug Fables</a></li>
             <li><a href="#">The Most Vinning Playlist (Trust)</a></li>
             <li><a href="#">Specials</a></li>
             <li><a href="#">Contact Vi AD</a></li>
-            <li><a href="#">Yes :D</a></li>
+            <li><a href="./html/yes.html">Yes :D</a></li>
             </ul>
     </section>
     <nav class="horizontalNavigation">
