--- a/html/yes.html
+++ b/html/yes.html
@@ -11,3 +11,5 @@
     </header>
 </body>
 </html>
+
+"../sound/Eradicator's Cry by The J Gee.mp3", "../sound/Failed Propaganda by The J Gee.mp3", "../sound/Ranger Rave by The J Gee.mp3", "../sound/Reevaluate Your Next Moves by The J Gee.mp3", "../sound/Regress by The J Gee.mp3", "../sound/Reindustrialize by The J Gee.mp3", "../sound/Snare Tension by The J Gee.mp3"
