--- a/html/playlist.html
+++ b/html/playlist.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>(W.I.P.)Vibing Bee Screen</title>
+    <link href="../css/style3.css" rel="stylesheet" />
+    <link href="../css/sad.css" rel="stylesheet" />
+    <link rel="icon" type="image/x-icon" href="../png/favicon.ico">
 </head>
 <body>
-    
+        <header><a class="photoLink" href="../index.html"> <img src="../png/viface.png" alt="Vinng" /></a></header>
+        <section id="vibee">
+        <img id="stand" src="../png/vi1.png" style="width: 105px; height: 150px;" alt="stand" /></section>
 </body>
 </html>
