--- a/html/store.html
+++ b/html/store.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Store?</title>
+    <title>(W.I.P.)Store?</title>
     <link href="../css/style3.css" rel="stylesheet" />
-    <link href="./css/sad.css" rel="stylesheet" />
+    <link href="../css/sad.css" rel="stylesheet" />
     <link rel="icon" type="image/x-icon" href="../png/favicon.ico">
 </head>
 <body>
