--- a/html/yes.html
+++ b/html/yes.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Testing Ground for dumb stuff, duh</title>
+    <title>(W.I.P.)Testing Ground for dumb stuff, duh</title>
      <link href="../css/yes.css" rel="stylesheet" />
 </head>
 <body>
