--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <ul>
             <li><a href="./index.html">This Page</a></li>
             <li><a href="./html/store.html">Store Pages For Bug Fables</a></li>
-            <li><a href="#">The Most Vinning Playlist (Trust)</a></li>
+            <li><a href="./html/playlist.html">The Most Vinning Playlist (Trust)</a></li>
             <li><a href="#">Specials</a></li>
             <li><a href="#">Contact Vi AD</a></li>
             <li><a href="./html/yes.html">Yes :D</a></li>
