--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     <section id="rightColumn">
             <ul>
             <li><a href="./index.html">This Page</a></li>
-            <li><a href="./html/store.html">Store Pages For Bug Fables</a></li>
-            <li><a href="./html/playlist.html">The Most Vinning Playlist (Trust)</a></li>
+            <li><a href="#">Store Pages For Bug Fables</a></li>
+            <li><a href="#">The Most Vinning Playlist (Trust)</a></li>
             <li><a href="#">Specials</a></li>
             <li><a href="#">Contact Vi AD</a></li>
-            <li><a href="./html/yes.html">Yes :D</a></li>
+            <li><a href="#">Yes :D</a></li>
             </ul>
     </section>
     <nav class="horizontalNavigation">
