--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./css/style1.css" rel="stylesheet" />
     <link href="./css/sad.css" rel="stylesheet" />
+    <link href="./css/mutiview.css" rel="stylesheet" />
     <link rel="icon" type="image/x-icon" href="./png/favicon.ico">
 </head>
 <body>
@@ -13,12 +14,11 @@
     <section id="leftColumn"> <a class="photoLink" href="./index.html"> <img src="png/viface.png" alt="Vinng" /></a>
     </section>
     </header>
-        <section id="text">
-        
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, quia facere! Magnam debitis illum, officia consequuntur earum aliquam explicabo nobis necessitatibus repellat id itaque hic nihil minima excepturi dolorem nostrum?</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, quia facere! Magnam debitis illum, officia consequuntur earum aliquam explicabo nobis necessitatibus repellat id itaque hic nihil minima excepturi dolorem nostrum?</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, quia facere! Magnam debitis illum, officia consequuntur earum aliquam explicabo nobis necessitatibus repellat id itaque hic nihil minima excepturi dolorem nostrum?</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, quia facere! Magnam debitis illum, officia consequuntur earum aliquam explicabo nobis necessitatibus repellat id itaque hic nihil minima excepturi dolorem nostrum?</p>
+        <section id="text">  
+        <p>Vi is one of the main three charaters from a small indie game that released in late 2019 called, Bug Fables The Everlasting Sapling.</p>
+        <p>The game takes many things from the game Paper Mario (64) and Paper Mario The Thousand Year Door/Paper Mario TTYD and make something new with the "Og Paper Mario Games." The reason why these two game are talked about like this is after Paper Mario TTYD the franchise was taken into a different direction, because at the time Nintendo wanted it to be more different compared to another mario rpg franchise at the time, Mario and Luigi.</p>
+        <p>This move would change Paper Mario forever, but the importent thing to note here is that this left a spot open for another game to take it's spot. Nintendo though would not try to make one of these types of Paper Mario game until a very long time from then, and even then all they did when they went back for now is just remake Paper Mario TTYD for switch. Bug Fables took the on the challenge of filling this sopt even for just a but of time, and they did very well at they job, as their game is on any modeder consoles, the switch being one of those funnyly enough.</p>
+        <p>Now It a great game and all, but what so special about Vi to single her out of the whole game. Now while if you ever talked to anyone that has played Buf Fables the best charater is Leif no question; however Leif isn't peak like Vi. As in Leif has the best writing in the game, but Vi is just simpler to understand while also still being peak, and being able to bounce on other charaters much easier. There more to it than that, but it better to sgit add <div class=""></div>how then yap about it for another 10,00 years.</p>
         <p>Also if your having a hard time finding the other url, use tab. It's a very helpfully buttons for hidden urls</p>
 
         </section>
@@ -26,7 +26,7 @@
             <ul>
             <li><a href="./index.html">This Page</a></li>
             <li><a href="#">Store Pages For Bug Fables</a></li>
-            <li><a href="#">The Most Vinning Playlist (Trust)</a></li>
+            <li><a href="https://www.youtube.com/watch?v=VGZ1wCU_gzk">The Vinning</a></li>
             <li><a href="#">Specials</a></li>
             <li><a href="#">Contact Vi AD</a></li>
             <li><a href="#">Yes :D</a></li>
@@ -43,10 +43,8 @@
 
     </header>
     <footer>
-        <p>Sprite pngs are taken from <div class="tenor-gif-embed" data-postid="23822980" data-share-method="host" data-aspect-ratio="0.7" data-width="100%"><a href="https://www.spriters-resource.com/pc_computer/bugfablestheeverlastingsapling/asset/124410/">Spriters Resource</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script> </p>
-        <section id="copyright">
-            <p>Copyright sometime in the future, maybe... don't worry about it, here's some numbers. There contacts for no one, don't trust +9-511-401-0173</p>
-        </section>
+        <p>Sprite pngs are taken from <div class="tenor-gif-embed" data-postid="23822980" data-share-method="host" data-aspect-ratio="0.7" data-width="100%"><a href="https://www.spriters-resource.com/pc_computer/bugfablestheeverlastingsapling/asset/124410/">Spriters Resource</a></div></p>
+        <p>Copyright sometime in the future, maybe... don't worry about it, here's some numbers. There contacts for no one, don't trust +9-511-401-0173</p>
     </footer>
 </body>
 </html>
