--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <li><a href="https://www.youtube.com/watch?v=VGZ1wCU_gzk">The Vinning</a></li>
             <li><a href="#">Specials</a></li>
             <li><a href="#">Contact Vi AD</a></li>
-            <li><a href="#">Yes :D</a></li>
+            <li><a href="./html/strat_e.html">Uncool way to get to link</a></li>
             </ul>
     </section>
     <nav class="horizontalNavigation">
