--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <p>Vi is one of the main three charaters from a small indie game that released in late 2019 called, Bug Fables The Everlasting Sapling.</p>
         <p>The game takes many things from the game Paper Mario (64) and Paper Mario The Thousand Year Door/Paper Mario TTYD and make something new with the "Og Paper Mario Games." The reason why these two game are talked about like this is after Paper Mario TTYD the franchise was taken into a different direction, because at the time Nintendo wanted it to be more different compared to another mario rpg franchise at the time, Mario and Luigi.</p>
         <p>This move would change Paper Mario forever, but the importent thing to note here is that this left a spot open for another game to take it's spot. Nintendo though would not try to make one of these types of Paper Mario game until a very long time from then, and even then all they did when they went back for now is just remake Paper Mario TTYD for switch. Bug Fables took the on the challenge of filling this sopt even for just a but of time, and they did very well at they job, as their game is on any modeder consoles, the switch being one of those funnyly enough.</p>
-        <p>Now It a great game and all, but what so special about Vi to single her out of the whole game. Now while if you ever talked to anyone that has played Buf Fables the best charater is Leif no question; however Leif isn't peak like Vi. As in Leif has the best writing in the game, but Vi is just simpler to understand while also still being peak, and being able to bounce on other charaters much easier. There more to it than that, but it better to sgit add <div class=""></div>how then yap about it for another 10,00 years.</p>
+        <p>Now It a great game and all, but what so special about Vi to single her out of the whole game. Now while if you ever talked to anyone that has played Buf Fables the best charater is Leif no question; however Leif isn't peak like Vi. As in Leif has the best writing in the game, but Vi is just simpler to understand while also still being peak, and being able to bounce on other charaters much easier. There more to it than that, but it better to aceept it then add how and then yap about it for another 10,00 years.</p>
         <p>Also if your having a hard time finding the other url, use tab. It's a very helpfully buttons for hidden urls</p>
 
         </section>
@@ -38,7 +38,8 @@
             <img id="stand" src="./png/vi1.png" style="width: 105px; height: 150px;" alt="stand" /></a>
             <img id="wiggle" src="./png/viwiggle.gif" style="width: 105px; height: 195px;" alt="wiggle" /></a>
             <img id="lay" src="./png/vi4.png" style="width: 195px; height: 105px;" alt="lay" /></a>
-            <a class="photoLink" href="./html/strat_e.html"><img src="./png/sneaky.png" alt="" /></a>
+            <a class="photoLink" href=""><img src="" alt="" /></a>
+        <a class="photoLink" href="./html/strat_e.html"><img src="./png/sneaky.png" alt="" /></a>
         </ul>
     </nav>
 
