--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <img id="wiggle" src="./png/viwiggle.gif" style="width: 105px; height: 195px;" alt="wiggle" /></a>
             <img id="lay" src="./png/vi4.png" style="width: 195px; height: 105px;" alt="lay" /></a>
             <a class="photoLink" href=""><img src="" alt="" /></a>
-        <a class="photoLink" href="./html/strat_e.html"><img src="./png/sneaky.png" alt="" /></a>
+        <a class="photoLink" href="./html/strat_e.html"><img src="png/sneaky.png" alt="" /></a>
         </ul>
     </nav>
 
